--- a/src/main/resources/templates/htmls/manage-user.html
+++ b/src/main/resources/templates/htmls/manage-user.html
@@ -39,7 +39,7 @@
         </table>
         <div dir="rtl" style="margin-right: auto;margin-left: auto">
             <a th:href="@{/addNewUser}">
-                <img th:src="@{/image/plus.png}"  width="20" height="20" title="افزودن کاررررربر">
+                <img th:src="@{/image/plus.png}"  width="20" height="20" title="افزودن کاربر">
             </a>
         </div>
         <div style="margin-left: 160px; width:200px" dir="rtl">
