--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,8 +1,10 @@
 .input-text {
     width: 100%;
+    height: 30px;
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
+    font-family: f1;
 }
 .button-submit{
     background-color: #4CAF50;
@@ -14,4 +16,17 @@
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
+    font-family: f1;
 }
+
+.operationResult{
+    width:0px;height: 0px;
+    display: none;
+}
+
+@font-face {
+    font-family: f1;
+    src: url(/font/BNazanin.ttf);
+}
+
+
