--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -29,4 +29,21 @@
     src: url(/font/BNazanin.ttf);
 }
 
+.searchResultTable {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.searchResultTd, .searchResultTh {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+.searchResultTr:nth-child(even) {
+    background-color: #dddddd;
+}
+
+
 
